fixed character count alignment and stars todo div, added table to main card and removed old paragraph

--- a/client/src/components/ReviewForm/reviewForm.css
+++ b/client/src/components/ReviewForm/reviewForm.css
@@ -3,13 +3,6 @@
   text-align: left;
 }
 
-.pRight {
-  position: absolute;
-  right: 30px;
-  top: 468px;
-  font-size: medium;
-}
-
 .alwaysLeft {
   text-align: left;
   min-width: 90%;
